[package]
name = "uplist"
version = "0.1.0"
authors = ["b-fuze <b-fuze.root@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
futures-util = "0.3"
warp = "0.3"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

